# Max

./: .gitignore  README.md  max.py  pyproject.toml  requirements.txt
.github/workflows/: publish-to-pypi.yml
wiki/: add-spns.md  add-spw.md  del-edge.md  dpat.md  export.md  get-info.md  mark-hvt.md  mark-owned.md  pet-max.md  query.md
